fixed alignment for above tablet below cutoff

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,6 +1,6 @@
 nav {
   position: fixed;
-  left: 35px;
+  left: 1vw;
   top: 40vh;
   display: grid;
 }
@@ -64,6 +64,8 @@ nav {
 	.dotstyle div a {
 		left: -25px;
 	}
+
+	nav { left: 35px; }
 }
 
 @media only screen and (max-width: 480px) {
